--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -282,7 +282,7 @@
     "lockScreenOr": "OR",
     "lockScreenPasswordUnlock": "Enter Master Password",
     "lockScreenUnlockButton": "Unlock",
-    "dialogDisableBiometricsContent":  "Disabling biometrics means  you will lose access to your decoy vault from the lock screen.",
+    "dialogDisableBiometricsContent":  "If you disable biometrics, the app will open directly to your real vault . You will lose the ability to open your decoy vault.",
     "dialogDisableButton": "Disable",
     "dialogDisableBiometricsTitle" : "Disable Biometrics?"
 
