--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -290,5 +290,13 @@
     "dialogDisableButton": "إيقاف",
     "dialogDisableBiometricsTitle" : "إيقاف المصادقة الحيوية ؟",
     "reorderToolTip": "إعادة ترتيب الحسابات",
-    "reorderScreenTitle" : "إعادة ترتيب"
+    "reorderScreenTitle" : "إعادة ترتيب",
+    "decoyCreatePasswordHint": "لأمانك، الرجاء اختيار كلمة مرور مختلفة عن كلمة المرور الرئيسية.",
+    "decoyPasswordMatchDialogTitle": "تطابق في كلمة المرور",
+    "decoyPasswordMatchDialogContent": "لا يمكن أن تكون كلمة المرور الوهمية هي نفسها كلمة المرور الرئيسية الحقيقية. الرجاء اختيار كلمة مرور مختلفة.",
+    "dialogOk": "حسناً",
+    "errorPasswordMatchesDecoy": "لا يمكن أن تكون كلمة المرور الجديدة هي نفسها كلمة مرور حسابك الوهمي.",
+    "dialogConfirmExitTitle": "الخروج من التطبيق؟",
+    "dialogConfirmExitContent": "هل أنت متأكد من رغبتك في إغلاق التطبيق؟",
+    "dialogExitButton": "خروج"
 }
