--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -66,7 +66,7 @@
     "accountFormUsernameHint": "اسم المستخدم أو البريد الإلكتروني",
     "accountFormPasswordHint": "كلمة المرور",
     "accountFormRecoveryHint": "حساب الاسترداد (اختياري)",
-    "accountFormPhoneHint": "أرقام الهواتف (اختياري)",
+    "accountFormPhoneHint": "رقم الهاتف (اختياري)",
     "accountFormSaveButton": "حفظ",
     "settingsScreenTitle": "الإعدادات",
     "settingsAppearance": "المظهر",
