finish secret_vault

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -323,5 +323,26 @@
     "customFieldsFieldName": "اسم الحقل",
     "customFieldsValue": "القيمة",
     "customFieldsAddButton": "إضافة حقل مخصص",
-    "excelHeaderCustomFields": "الحقول المخصصة (JSON)"
+    "excelHeaderCustomFields": "الحقول المخصصة (JSON)",
+    "secretVaultTitle": "الخزنة السرية",
+    "secretVaultPinScreenSetupTitle": "أنشئ رمزاً سرياً",
+    "secretVaultPinScreenEnterTitle": "أدخل الرمز السري",
+    "secretVaultPinScreenSetPinHeader": "عيّن رمز PIN لخزنتك السرية",
+    "secretVaultPinScreenUnlockHeader": "افتح خزنتك السرية",
+    "secretVaultPinScreenInstruction": "أدخل رمز PIN مكون من 4 أرقام.",
+    "secretVaultEmptyTitle": "خزنتك السرية فارغة",
+    "secretVaultEmptySubtitle": "اضغط على زر '+' لإضافة أول ملاحظة أو مفتاح سري لك.",
+    "secretVaultAddItemTitle": "إضافة عنصر سري",
+    "secretVaultEditItemTitle": "تعديل العنصر السري",
+    "secretVaultTitleHint": "العنوان",
+    "secretVaultContentHint": "المحتوى السري",
+    "secretVaultConfirmDelete": "هل أنت متأكد من رغبتك في حذف هذا العنصر السري؟",
+    "feedbackSecretItemContentCopied": "تم نسخ المحتوى إلى الحافظة!",
+    "validationTitleEmpty": "لا يمكن أن يكون العنوان فارغاً",
+    "validationContentEmpty": "لا يمكن أن يكون المحتوى فارغاً",
+    "errorIncorrectPin": "رمز PIN غير صحيح",
+    "dialogDeleteVaultTitle": "حذف الخزنة السرية؟",
+    "dialogDeleteVaultContent": "هل أنت متأكد؟ سيتم حذف جميع العناصر السرية بشكل دائم. لا يمكن التراجع عن هذا الإجراء.",
+    "exportSuccess": "تم التصدير بنجاح!",
+    "exportCancelled": "تم إلغاء التصدير."
 }
